# devops-playground

./: .gitignore  CLI_SHORTCUTS.md  MIGRATION_SUMMARY.md  MIGRATION_SUMMARY.md.backup  QUICKSTART.md  README.md  SCRIPTS_SUMMARY.md  USAGE.md  env_cleanup.sh  env_setup.sh  pyproject.toml
devops_tools/: __init__.py  cli.py  config.py  env.py  gitea.py  jenkins.py  project.py  utils.py
docker/: docker-compose.yml
docker/jenkins/: Dockerfile  entrypoint.sh  jenkins-cli.sh  plugins.txt
examples/: README.md  acme_org.sh  acme_setup.sh  acme_user_local.sh  acme_user_test.sh  atlas_test.sh  atlas_usage.md  basic.sh  dbci_diff_example.sh  full_setup.py  gitea_simple.py  gitea_team_workflow.py  jenkins_simple.py  library_usage.py  project_maven.py  project_postgres.py  teardown.py  teardown.sh  test_user_workflow.py
project_templates/dbci-tools/: .gitignore  .sqlfluff  Jenkinsfile  README.md  run.sh
project_templates/dbci-tools/dbci_tools/: cli.py  diff.py  git_normalizer.py  guard.py  linter.py  normalizer.py
project_templates/demo-db/: Jenkinsfile
project_templates/demo-db/db/schema/: 001_tenants.sql  010_users.sql
project_templates/demo-dw/db/schema/: 100_t_dim_customers.sql  110_t_dim_products.sql
project_templates/demo-etl/: Jenkinsfile  README.md  dagster.yaml  pyproject.toml  workspace.yaml
project_templates/demo-etl/tests/: test_assets.py
project_templates/demo-etl/tests/data/20240201/: customer_addresses.csv  customers.csv  order_items.csv  orders.csv
project_templates/demo-etl/tests/data/20240202/: customers.csv  product_groups.csv
project_templates/etl-framework/: .env.postgres.template  README.md  RECIPES.md  pyproject.toml  run.sh
project_templates/etl-framework/dagster_etl_framework/: __init__.py  __main__.py  __setup__.py  cli.py  cli_main.py  commands.py  framework.py  io_managers.py  main.py  setup.py  setup_standalone.py  source_model.py  source_model_loader.py
project_templates/maven-project/: pom.xml
project_templates/maven-project/src/main/java/acme/: App.java
project_templates/maven-project/src/test/java/acme/: AppTest.java
projects/dbci-tools/: README.md  pyproject.toml
projects/dbci-tools/dbci_tools/: cli.py  deploy.py
projects/demo-app/: Jenkinsfile
projects/demo-dw/: .sqlfluff
projects/demo-dw/db/schema/: 000_t_dim_date.sql  100_t_dim_customer.sql  110_t_dim_product.sql  300_t_fact_order.sql  300_t_fact_orders.sql  500_dim_date.sql  600_dim_customer.sql  600_dim_customers.sql  610_dim_product.sql  610_dim_products.sql  700_fact_order.sql  700_fact_orders.sql  README.md  Untitled.csv
projects/demo-dw/docker/: docker-compose.yml
projects/demo-etl/: Jenkinsfile
projects/demo-etl/demo_etl/: __init__.py  assets.py  resources.py  source_model.yaml
projects/demo-etl/tests/: config_test.yaml  test_assets.py  test_scd_type2.py
projects/demo-etl/tests/data/20240201/: product_groups.csv  products.csv
projects/demo-etl/tests/data/20240202/: customer_addresses.csv  order_items.csv  orders.csv  products.csv
projects/demo-etl/tests/data/20240203/: customer_addresses.csv  customers.csv  order_items.csv  orders.csv  product_groups.csv  products.csv
projects/etl-framework/: .env.csv.template  .env.postgres.template  .env.sqlite.template  .gitignore  README.md  SQLITE_USAGE.md  pyproject.toml  run.sh
projects/etl-framework/dagster_etl_framework/: __init__.py  __main__.py  cli.py  cli_main.py  commands.py  framework.py  hcl_parser.py  io_managers.py  main.py  model_validator.py  resources.py  setup.py  setup_standalone.py  teardown.py
scripts/: .env-vars  .import.sh  env-functions.sh  gitea-functions.sh  jenkins-functions.sh  project-functions.sh
scripts/templates/: basic-security.groovy  jenkins-pipeline-job.xml
scripts/templates/gitea/: repo.json
scripts/templates/jenkins/: jenkins-creds.xml  jenkins-org.xml  jenkins.yaml
templates/: README.md
templates/gitea/: branch-protection.json  patch-repo.json  post-repo.json
templates/jenkins/: basic-security.groovy  jenkins-org.xml  jenkins.yaml
tests/: init_maven.sh  setup.sh  setup_env.sh  setup_gitea.sh  setup_jenkins.sh  setup_local.sh  teardown.sh
